# continual-learning

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  compare.py  compare_hyperParams.py  compare_hyperParams_task_free.py  compare_replay.py  compare_task_free.py  main.py  main_pretrain.py  main_task_free.py  pyproject.toml  utils.py
.claude/commands/: results.md
ICLRblogpost/: compare_FI.py
NeurIPStutorial/: compare_for_tutorial.py
StabilityGap/: stability_gap_example.py
data/: available.py  datastream.py  labelstream.py  load.py  manipulate.py
eval/: callbacks.py  evaluate.py
models/: classifier.py  classifier_stream.py  cond_vae.py  define_models.py  feature_extractor.py  generative_classifier.py  separate_classifiers.py  vae.py
models/cl/: continual_learner.py  fromp_optimizer.py  memory_buffer.py  memory_buffer_stream.py
models/conv/: layers.py  nets.py
models/fc/: excitability_modules.py  layers.py  nets.py
models/utils/: loss_functions.py  modules.py  ncl.py
params/: options.py  param_stamp.py  param_values.py
store/results/: acc-splitMNIST5-class--F-784x400x400_c10--i2000-lr0.001-b128-adam-all--PReg0.001-SI0.1.txt  acc-splitMNIST5-class--F-784x400x400_c10--i2000-lr0.001-b128-adam-all--PReg0.005-SI0.1.txt  acc-splitMNIST5-class--F-784x400x400_c10--i2000-lr0.001-b128-adam-all--PReg0.01-ActMatC1000.txt  acc-splitMNIST5-class--F-784x400x400_c10--i2000-lr0.001-b128-adam-all--PReg0.01-SI0.1.txt  (+135 more)
train/: train_standard.py  train_stream.py  train_task_based.py
visual/: visual_plt.py  visual_visdom.py
